checkstyle: don't instantiate Boolean.